class api update
